--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/trochwerger/web322-app#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
+    "open": "^8.4.0"
   }
 }
