--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/trochwerger/web322-app#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "multer": "^1.4.5-lts.1",
     "open": "^8.4.0"
   }
