--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/trochwerger/web322-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "client-sessions": "^0.8.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
     "open": "^8.4.0",
     "pg": "^8.8.0",
